# cli

./: AGENTS.md  index.html  package-lock.json  package.json
docs/: architecture-phase-3.md
docs/plan/: rust-pty-intelligence.md
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  lib.rs  main.rs
src-tauri/src/pty/: mod.rs  output_pipeline.rs  process_monitor.rs  session.rs  state_machine.rs  termios_monitor.rs
src-tauri/src/shell/: integration.rs
src/components/: CommandEditor.tsx  StatusBar.tsx  TerminalView.tsx
src/hooks/: useTranscript.ts
src/types/: pty.ts
