[package]
name = "cli-app"
version = "0.1.0"
description = "A transcript-first terminal app"
authors = ["you"]
edition = "2021"

[lib]
name = "cli_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
portable-pty = "0.9"
vte = "0.13"
nix = { version = "0.29", features = ["signal", "process", "term"] }
libproc = "0.14"
tokio = { version = "1", features = ["time"] }
anyhow = "1"
